--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     font-family: "Exo 2", sans-serif;
     font-optical-sizing: auto;
     font-weight: 100;
-    font-style: normal;
+    font-style: italic;
   }
 
 .exo-2-normal {
