--- a/style.css
+++ b/style.css
@@ -5,6 +5,17 @@
     padding:0px;
 }
 
+ol, ol a{
+    background-color: inherit;
+    color: #F7F7F8;
+}
+
+li{
+    padding-left:10px ;
+    background-color: inherit;
+    list-style-position: inside;
+}
+/* Fonts */
 .exo-2-light {
     font-family: "Exo 2", sans-serif;
     font-optical-sizing: auto;
@@ -42,14 +53,24 @@
     background-color: #3A1078; 
 }
 
+/* .second{
+    padding: 0px 20px 20px 20px;
+    margin: 25px 10px;
+    border: 2px solid #3795BD;
+    border-radius: 10px 30px;
+    background-color: #1f0546; 
+} */
+
 .box p, .box p a{
-    font-size: 25px;
-    background-color: #3A1078;
+    font-size: 20px;
+    background-color: inherit;
 }
 
 .box .title{
-    background-color: #3A1078;
+    font-size: 25px;
+    background-color: inherit;
     text-align: center;
+    
 }
 
 .navbar{
@@ -80,6 +101,7 @@
    font-size: 150%;
    margin-left: 50px;
 }
+
 
 
 
