--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ ol, ol a{
 }
 
 li{
-    padding-left:10px ;
     background-color: inherit;
     list-style-position: inside;
 }
@@ -66,7 +65,7 @@ li{
     background-color: inherit;
 }
 
-.box .title{
+.title{
     font-size: 25px;
     background-color: inherit;
     text-align: center;
@@ -87,6 +86,23 @@ li{
     font-weight: 300;
 }
 
+
+/* card styling */
+
+.card{
+    width:210px;
+    height:210px;
+    padding: 20px 10px 20px 10px;
+    margin: 25px 10px;
+    border: 2px solid #3795BD;
+    /* border-radius: 10px 30px; */
+    background-color: #3A1078;
+    text-align: center; 
+}
+
+.card li a{
+    background-color: inherit;
+}
 /* Footer styling */
 
 .footer{
