--- a/style.css
+++ b/style.css
@@ -66,10 +66,10 @@ li{
 }
 
 .title{
+    margin: 10px 0px;
     font-size: 25px;
     background-color: inherit;
     text-align: center;
-    
 }
 
 .navbar{
@@ -93,15 +93,32 @@ li{
     width:210px;
     height:210px;
     padding: 20px 10px 20px 10px;
-    margin: 25px 10px;
+    margin: 20px 50px;
     border: 2px solid #3795BD;
     /* border-radius: 10px 30px; */
     background-color: #3A1078;
     text-align: center; 
+    
 }
 
 .card li a{
     background-color: inherit;
+}
+
+.tray{
+    width: max-content;
+    padding: 20px 10px 20px 10px;
+    margin: 25px 10px;
+    border: 2px solid #3795BD;
+    /* border-radius: 10px 30px; */
+    background-color: #3A1078;
+    text-align: justify; 
+}
+
+.tray-title{
+    font-size: 25px;
+    margin-top:10px;
+    margin-left: 20px;
 }
 /* Footer styling */
 
