--- a/style.css
+++ b/style.css
@@ -98,8 +98,18 @@ li{
     /* border-radius: 10px 30px; */
     background-color: #3A1078;
     text-align: center; 
-    
 }
+.card-2{
+    width:210px;
+    height:210px;
+    padding: 20px 10px 20px 10px;
+    margin: 20px 5px;
+    border: 2px solid #3795BD;
+    /* border-radius: 10px 30px; */
+    background-color: #3A1078;
+    text-align: center; 
+}
+
 
 .card li a{
     background-color: inherit;
