--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@ li{
     background-color: inherit;
     list-style-position: inside;
 }
+
+.image-border{
+    border:2px solid #3795BD;
+    margin:5px;
+}
+
+
 /* Fonts */
 .exo-2-light {
     font-family: "Exo 2", sans-serif;
@@ -109,7 +116,6 @@ li{
     background-color: #3A1078;
     text-align: center; 
 }
-
 
 .card li a{
     background-color: inherit;
