style update with new uploads

--- a/style.css
+++ b/style.css
@@ -137,6 +137,11 @@ li {
   display: inline-block;
 }
 
+.card img{
+  height: 174px;
+  width: 84px;
+}
+
 .card li a {
   background-color: inherit;
 }
