--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ li {
   padding: 0px 20px 20px 20px;
   margin: 5px;
   border: 2px solid #3795bd;
-  /* border-radius: 10px 30px; */
+  border-radius: 10px 30px;
   background-color: #3a1078;
 }
 
@@ -114,8 +114,8 @@ li {
   background-color: #4e31aa;
   border: 2px solid #3795bd;
   padding: 10px;
-  /* text-decoration: none;
-    border-radius: 10px; */
+  text-decoration: none;
+    border-radius: 10px;
 }
 
 .button a:hover {
@@ -131,7 +131,7 @@ li {
   padding: 20px 10px 20px 10px;
   margin: 10px 10px 0px 20px;
   border: 2px solid #3795bd;
-  /* border-radius: 10px 30px; */
+  border-radius: 10px 30px;
   background-color: #3a1078;
   text-align: center;
   display: inline-block;
@@ -155,7 +155,7 @@ li {
   padding: 20px 10px 20px 10px;
   margin: 25px 10px;
   border: 2px solid #3795bd;
-  /* border-radius: 10px 30px; */
+  border-radius: 10px 30px;
   background-color: #3a1078;
   text-align: justify;
 }
