--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
-    padding: 0;
-    margin: 0;
+    padding: 0rem;
+    margin: 0rem;
     font-family: "Exo 2", serif;
     font-optical-sizing: auto;
     font-weight: 500;
@@ -31,6 +31,16 @@ body, html {
 }
 
 .navbar li a{
+    display: block;
+    padding: 20px 25px;
+    color: #f1f1f1;
+    text-decoration: none;
+    text-align: center;
+    font: 1rem;
+    transition: .5s ease;
+}
+
+.navbar span{
     display: block;
     padding: 20px 25px;
     color: #f1f1f1;
