--- a/style.css
+++ b/style.css
@@ -1,395 +1,462 @@
-*{
-    padding: 0rem;
-    margin: 0rem;
-    font-family: "Exo 2", serif;
-    font-optical-sizing: auto;
-    font-weight: 500;
-    font-style: normal;
-    box-sizing: border-box;
+* {
+  padding: 0rem;
+  margin: 0rem;
+  font-family: "Exo 2", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  box-sizing: border-box;
 }
-body, html {
-    height: 100%;
-}
-
-.navbar{
-    list-style: none;
-    background-color: #342276;
-    position: fixed;
-    top:0; 
-    width: 100%;
-    z-index: 1; 
+body,
+html {
+  height: 100%;
 }
 
-.logo{
-    border-right: 0.13rem solid #f1f1f1;
-    letter-spacing: .5rem;
+.navbar {
+  list-style: none;
+  background-color: #342276;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 }
 
-.navbar li{
-    display: inline-block;
-    position: relative;
+.logo {
+  border-right: 0.13rem solid #f1f1f1;
+  letter-spacing: 0.5rem;
 }
 
-.navbar li a{
-    display: block;
-    padding: 20px 25px;
-    color: #f1f1f1;
-    text-decoration: none;
-    text-align: center;
-    font: 1rem;
-    transition: .5s ease;
+.navbar li {
+  display: inline-block;
+  position: relative;
 }
 
-.navbar span{
-    display: block;
-    padding: 20px 25px;
-    color: #f1f1f1;
-    text-decoration: none;
-    text-align: center;
-    font: 1rem;
-    transition: .5s ease;
+.navbar li a {
+  display: block;
+  padding: 20px 25px;
+  color: #f1f1f1;
+  text-decoration: none;
+  text-align: center;
+  font: 1rem;
+  transition: 0.5s ease;
 }
 
-.navbar .logo{
-    padding: 20px 25px;
-    color: #f1f1f1;
-    text-align: center;
+.navbar span {
+  display: block;
+  padding: 20px 25px;
+  color: #f1f1f1;
+  text-decoration: none;
+  text-align: center;
+  font: 1rem;
+  transition: 0.5s ease;
 }
 
-.dropdown{
-    display: none;
-    width: 100%;
-    background-color: #342276;
-    position: absolute;
-    z-index: 2;
-    
-}
-.navbar li a:hover{
-    background-color: #C8C488;
-    color: #000;
-}
-.navbar li:hover .dropdown{
-    display: block;
+.navbar .logo {
+  padding: 20px 25px;
+  color: #f1f1f1;
+  text-align: center;
 }
 
-.dropdown li{
-    display: block;
+.dropdown {
+  display: none;
+  width: 100%;
+  background-color: #342276;
+  position: absolute;
+  z-index: 2;
+}
+.navbar li a:hover {
+  background-color: #c8c488;
+  color: #000;
+}
+.navbar li:hover .dropdown {
+  display: block;
+}
+
+.dropdown li {
+  display: block;
 }
 
 .hero-image {
-    background-image: linear-gradient(rgba(35, 50, 83, 0.5),rgba(52, 34, 118, 0.5)), url("./Arc_V_Lancers_Selection.png");
-    height: 80%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  }
-  
-  .hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 1.3vw;
-    text-shadow: 2px 2px #4e4e4e;
-  }
-  
-  .hero-text button {
-    border: none;
-    border-radius: 10px;
-    outline: 0;
-    display: inline-block;
-    padding: 10px 25px;
-    color: #f1f1f1;
-    background-color: #6D3D6E;
-    text-align: center;
-    cursor: pointer;
-    transition: .5s ease;
-  }
-  
-  .hero-text button:hover {
-    background-color: #C8C488;
-    color: #000;
-  }
-
-  #container1{
-    height: 60%;
-    background: #C8C488;
-    position:relative;
-    
-  } 
-  #container2{
-    height: 80%;
-    background-color: #6D3D6E;
-    position: relative;
-}
-#container1 .content{
-    color: #000;
-    text-align: center;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-shadow: 2px 2px #f1f1f1;
+  background-image: linear-gradient(
+      rgba(35, 50, 83, 0.5),
+      rgba(52, 34, 118, 0.5)
+    ),
+    url("./Arc_V_Lancers_Selection.png");
+  height: 80%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
-.cards{
-    margin-top:20px;
-    width: 100%;
-    text-align: center;
-   
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 1.3vw;
+  text-shadow: 2px 2px #4e4e4e;
 }
 
-.card{
-    display: inline-block;
-    position: relative;
-    margin-left: 10px;
-
+.hero-text button {
+  border: none;
+  border-radius: 10px;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 25px;
+  color: #f1f1f1;
+  background-color: #6d3d6e;
+  text-align: center;
+  cursor: pointer;
+  transition: 0.5s ease;
 }
 
-.card img{
-    width: 250px;
-    height: 250px;
-    display: block;
-    border-radius: 10px;
-}
-.card-overlay{
-    border-radius: 10px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #233253;
-    overflow: hidden;
-    width: 100%;
-    height: 0;
-    transition: .3s ease;
+.hero-text button:hover {
+  background-color: #c8c488;
+  color: #000;
 }
 
-.card:hover .card-overlay{
-    height: 100%;
+#container1 {
+  height: 60%;
+  background: #c8c488;
+  position: relative;
 }
-  
+#container2 {
+  height: 80%;
+  background-color: #6d3d6e;
+  position: relative;
+}
+#container1 .content {
+  color: #000;
+  text-align: center;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-shadow: 2px 2px #f1f1f1;
+}
+
+.cards {
+  margin-top: 20px;
+  width: 100%;
+  text-align: center;
+}
+
+.card {
+  display: inline-block;
+  position: relative;
+  margin-left: 10px;
+}
+
+.card img {
+  width: 250px;
+  height: 250px;
+  display: block;
+  border-radius: 10px;
+}
+.card-overlay {
+  border-radius: 10px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #233253;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.card:hover .card-overlay {
+  height: 100%;
+}
+
 .card-text {
-    color: white;
-    font-size: 1vw;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    text-shadow: 2px 2px #4e4e4e;
-  }
-
-.card-text button{
-    margin-top: 10px;
-    border: none;
-    border-radius: 10px;
-    outline: 0;
-    display: inline-block;
-    padding: 10px 25px;
-    color: #f1f1f1;
-    background-color: #6D3D6E;
-    text-align: center;
-    cursor: pointer;
-    transition: .5s ease;
-  }
-
-  
-.card-text button:hover{
-    background-color: #C8C488;
-    color: #000;
+  color: white;
+  font-size: 1rem;
+  text-shadow: 2px 2px #4e4e4e;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-#container2 > .content{
-    color: #f1f1f1;
-    text-align: center;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-shadow: 2px 2px #4e4e4e;
+.card-overlay button {
+  margin-top: 10px;
+  border: none;
+  border-radius: 10px;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 25px;
+  color: #f1f1f1;
+  background-color: #6d3d6e;
+  text-align: center;
+  cursor: pointer;
+  transition: 0.5s ease;
 }
 
-.container{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    row-gap: 10px;
-    padding: 1rem;
+.card-text button:hover {
+  background-color: #c8c488;
+  color: #000;
 }
 
-.container p{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-10%,-50%);
-    text-align: center;
-    z-index: 1;
-    font-size: larger;
+#container2 > .content {
+  color: #f1f1f1;
+  text-align: center;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-shadow: 2px 2px #4e4e4e;
 }
 
-.container img{
-    border-radius: 10px;
-    box-shadow: 2px 2px #C8C488;
-
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  row-gap: 10px;
+  padding: 1rem;
 }
 
-.container button{
-    margin-top: 3px;
-    border: none;
-    border-radius: 10px;
-    outline: 0;
-    display: inline-block;
-    padding: 10px 25px;
-    color: #f1f1f1;
-    background-color: #342276;
-    text-align: center;
-    cursor: pointer;
-    transition: .5s ease;
+.container p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-10%, -50%);
+  text-align: center;
+  z-index: 1;
+  font-size: larger;
 }
 
-.container button:hover{
-    background-color: #C8C488;
-    color: #000;
+.container img {
+  border-radius: 10px;
+  box-shadow: 2px 2px #c8c488;
 }
 
-.newsletter{
-    height: 60%;
-    background-color: #342276;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-}
-.newsletter h1, .newsletter p{
-    color:#f1f1f1;
-    text-align: center;
-    text-shadow: 2px 2px #4e4e4e;
-}
-
-h1{
-    font-size: 3rem;
+.container button {
+  margin-top: 3px;
+  border: none;
+  border-radius: 10px;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 25px;
+  color: #f1f1f1;
+  background-color: #342276;
+  text-align: center;
+  cursor: pointer;
+  transition: 0.5s ease;
 }
 
-.newsletter p{
-    margin-bottom: 1rem;
-    margin-top: 0.2rem;
+.container button:hover {
+  background-color: #c8c488;
+  color: #000;
 }
 
-.newsletter > .container{
-    width: 50%;
-    padding: 6rem;
-    background-color: #6D3D6E;
-    position: relative;
+.newsletter {
+  height: 60%;
+  background-color: #342276;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.newsletter h1,
+.newsletter p {
+  color: #f1f1f1;
+  text-align: center;
+  text-shadow: 2px 2px #4e4e4e;
 }
 
-.email-box button{
-    margin-top: 3px;
-    border: none;
-    border-radius: 10px;
-    outline: 0;
-    display: inline-block;
-    padding: 10px 25px;
-    color: #f1f1f1;
-    background-color: #6D3D6E;
-    text-align: center;
-    cursor: pointer;
-    transition: .5s ease;
+h1 {
+  font-size: 3rem;
 }
 
-.email-box button:hover{
-    background-color: #C8C488;
-    color: #000;
+.newsletter p {
+  margin-bottom: 1rem;
+  margin-top: 0.2rem;
 }
 
-.news-container > form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.newsletter > .container {
+  width: 50%;
+  padding: 6rem;
+  background-color: #6d3d6e;
+  position: relative;
 }
 
-.email-box{
-    padding: 0.5rem 0.5rem 0.5rem 1rem;
-    border: 0.15rem solid #f1f1f1;
-    border-radius:0.3rem;
-    display: inline-block;
-    transition: 0.5s ease
+.email-box button {
+  margin-top: 3px;
+  border: none;
+  border-radius: 10px;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 25px;
+  color: #f1f1f1;
+  background-color: #6d3d6e;
+  text-align: center;
+  cursor: pointer;
+  transition: 0.5s ease;
 }
 
-input[type=text]{
-    padding: 0.3rem 1rem;
-    outline: none;
-    background: none;
-    border: none;
-    font-weight: 600;
-    color: #f1f1f1;
-}
-input[type=text]::placeholder{
-    color:#F1F1F1;
+.email-box button:hover {
+  background-color: #c8c488;
+  color: #000;
 }
 
-i{
-    transform: scale(1.3);
-    color:#f1f1f1;
-    transition: 0.5s ease;
+.news-container > form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.email-box:hover, .email-box:hover i{
-    color:#6D3D6E;
-    border-color:#6D3D6E;
+.email-box {
+  padding: 0.5rem 0.5rem 0.5rem 1rem;
+  border: 0.15rem solid #f1f1f1;
+  border-radius: 0.3rem;
+  display: inline-block;
+  transition: 0.5s ease;
 }
 
-.footer{
-    height: 50%;
-    background-color: #233253;
-    display: flex;
-    align-items: center;
-    justify-content:space-around;
-    
+input[type="text"] {
+  padding: 0.3rem 1rem;
+  outline: none;
+  background: none;
+  border: none;
+  font-weight: 600;
+  color: #f1f1f1;
+}
+input[type="text"]::placeholder {
+  color: #f1f1f1;
 }
 
-.footer-content{
-    display: flex;
-    flex-direction: column;
-    row-gap: 1rem;
-    color: #f1f1f1;
+i {
+  transform: scale(1.3);
+  color: #f1f1f1;
+  transition: 0.5s ease;
 }
 
-.social-icons i{
-    font-size: 2rem;
-    transition:0.3s ease;
+.email-box:hover,
+.email-box:hover i {
+  color: #6d3d6e;
+  border-color: #6d3d6e;
 }
 
-.social-icons i:hover{
-    color:#6D3D6E;
-    
+.footer {
+  height: 50%;
+  background-color: #233253;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.social-icons{
-    width: 100%;
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+  color: #f1f1f1;
+}
+
+.social-icons i {
+  font-size: 2rem;
+  transition: 0.3s ease;
+}
+
+.social-icons i:hover {
+  color: #6d3d6e;
+}
+
+.social-icons {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.copyright {
+  height: 40px;
+  background-color: #342276;
+}
+
+.copyright p {
+  color: #f1f1f1;
+  padding: 10px;
+}
+
+.copyright a {
+  text-decoration: none;
+  color: #f1f1f1;
+  letter-spacing: 0.15rem;
+  transition: 0.3s ease;
+}
+
+.copyright a:hover {
+  color: #6d3d6e;
+}
+
+.article {
+  z-index: 0;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #6d3d6e;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.article h1 {
+  margin-top: 70px;
+}
+
+.product-contain {
+  display: flex;
+  width: 100%;
+  height: auto;
+  justify-content: space-around;
+  overflow: auto;
+  padding: 10px;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 10px;
+}
+.product-contain .card-overlay {
+  background-color: #c8c488;
+  display: flex;
+}
+
+.product-contain .card-text,
+.product-contain i {
+  font-size: 1.3rem;
+  color: black;
+  text-shadow: none;
+}
+
+.icons {
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
-.copyright{
-    height:40px;
-    background-color: #342276;
+.icons i{
+    flex: 6;
+    text-align: center;
+    justify-content: center;
+    align-content: center;
 }
 
-.copyright p{
-    color: #f1f1f1;
-    padding:10px;
+/* scroll bar style */
+::-webkit-scrollbar{
+    width: 10px;
 }
 
-.copyright a{
-    text-decoration: none;
-    color: #f1f1f1;
-    letter-spacing: .15rem;
-    transition: 0.3s ease;
+::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 5px #f1f1f1;
+    border-radius: 10px;
 }
 
-.copyright a:hover{
-    color:#6D3D6E;
+::-webkit-scrollbar-thumb{
+    background: #342276;
+    border-radius: 10px;
 }
+
