--- a/style.css
+++ b/style.css
@@ -424,6 +424,7 @@ i {
 .product-contain .card-overlay {
   background-color: #c8c488;
   display: flex;
+  gap:5rem;
 }
 
 .product-contain .card-text,
@@ -435,8 +436,7 @@ i {
 
 .icons {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    gap:5rem;
 }
 
 .icons i{
