--- a/style.css
+++ b/style.css
@@ -398,11 +398,11 @@ i {
   z-index: 0;
   position: relative;
   width: 100%;
-  height: 100%;
   background-color: #6d3d6e;
   display: flex;
   flex-direction: column;
   align-items: center;
+padding:1rem 0;
 }
 
 .article h1 {
@@ -444,6 +444,7 @@ i {
     text-align: center;
     justify-content: center;
     align-content: center;
+    cursor: pointer;
 }
 
 /* scroll bar style */
