--- a/style.css
+++ b/style.css
@@ -619,6 +619,7 @@ i {
   width: 100%;
   display: flex;
   justify-content: space-evenly;
+
 }
 
 .c-icons i:hover{
@@ -635,3 +636,79 @@ h2.title{
   text-shadow: 2px 2px #414141;
 }
 
+
+.column{
+display: flex;
+flex-direction: column;
+width: 500px;
+height: 600px;
+background-color: #c8c488;
+border-radius: 10px;
+}
+
+.products{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  padding:10px;
+}
+
+.column h2{
+  width: 100%;
+  padding: 10px;
+  position:sticky;
+  top:0;
+  z-index: 1;
+  background-color: #c8c488;
+  color: #000;
+  text-shadow: 2px 2px #f1f1f1;
+  border-radius: 10px 10px 0px 0px ;
+}
+
+.product{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: #6d3d6e;
+  border-radius: 10px;
+  margin-bottom:10px;
+}
+
+
+
+.product img{
+  width:100%;
+  height:200px;
+  border-radius: 10px 10px 0 0;
+  background:white;
+}
+
+.detail{
+width: 100%;
+display: flex;
+flex-direction: row;
+padding:20px;
+text-align: center;
+justify-content: space-evenly;
+align-items: center;
+
+}
+
+
+.detail > p{
+  flex:8;
+  font-size: 1rem;
+  color:#f1f1f1;
+  text-shadow: 2px 2px #414141;
+}
+
+.detail > i{
+  flex: 2;
+  color:#f1f1f1;
+  text-shadow: 2px 2px #414141;
+}
+
+.detail > i:hover{
+  color: #c8c488;
+}
