--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ html {
 .navbar li {
   display: inline-block;
   position: relative;
-  
 }
 
 .navbar li a {
@@ -75,15 +74,13 @@ html {
   display: block;
 }
 
-.dropdown li:last-child a{
+.dropdown li:last-child a {
   border-radius: 0px 0px 10px 10px;
 }
 
 .dropdown li {
   display: block;
 }
-
-
 
 #about {
   background-image: linear-gradient(
@@ -105,15 +102,17 @@ html {
   padding: 10rem 5rem;
 }
 
-#mission,#vision {
+#mission,
+#vision {
   display: flex;
 }
 
-#vision{
+#vision {
   flex-direction: row-reverse;
 }
 
-#mission .content, #vision .content{
+#mission .content,
+#vision .content {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -131,7 +130,8 @@ html {
 #mission .mission-img {
   width: 50%;
   height: 500px;
-  background-image: linear-gradient(90deg,
+  background-image: linear-gradient(
+      90deg,
       rgba(109, 61, 110, 0),
       rgba(109, 61, 110, 0.5),
       rgba(109, 61, 110, 0.5)
@@ -145,9 +145,10 @@ html {
 #vision .vision-img {
   width: 50%;
   height: 500px;
-  background-image: linear-gradient(90deg,
-    rgba(200, 196, 136, 0.5),
-    rgba(200, 196, 136, 0)
+  background-image: linear-gradient(
+      90deg,
+      rgba(200, 196, 136, 0.5),
+      rgba(200, 196, 136, 0)
     ),
     url("./images/vision.jpg");
   background-position: center;
@@ -155,15 +156,11 @@ html {
   background-size: cover;
 }
 
-#vision .content{
+#vision .content {
   background-color: #c8c488;
   color: #000;
   text-shadow: 2px 2px #f1f1f1;
 }
-
-
-
-
 
 .hero-image {
   background-image: linear-gradient(
@@ -498,11 +495,11 @@ i {
 .article h1 {
   margin-top: 70px;
   color: #f1f1f1;
-  text-shadow: 2px 2px #414141
+  text-shadow: 2px 2px #414141;
 }
 
-.yellow-background{
-  background-color: #c8c488; 
+.yellow-background {
+  background-color: #c8c488;
 }
 
 .product-contain {
@@ -516,36 +513,36 @@ i {
   gap: 10px;
 }
 
-.product-contain .row{
+.product-contain .row {
   display: flex;
   width: 100%;
   justify-content: space-around;
 }
 
-.column-flex{
+.column-flex {
   flex-direction: column;
   gap: 5rem;
 }
 
-.row:first-child{
+.row:first-child {
   padding-top: 20px;
 }
 
-.row .card .card-overlay{
+.row .card .card-overlay {
   background-color: #6d3d6e;
   display: flex;
   gap: 3rem;
 }
 
-.row .card .card-text{
-  color:#f1f1f1;
+.row .card .card-text {
+  color: #f1f1f1;
   text-shadow: 2px 2px #414141;
 }
 
-.row .icons i{
+.row .icons i {
   color: #f1f1f1;
 }
-.row .icons i:hover{
+.row .icons i:hover {
   color: #c8c488;
 }
 
@@ -606,11 +603,11 @@ i {
 
 /* singles cards */
 
-.c img{
+.c img {
   width: 200px;
 }
 
-.c{
+.c {
   background-color: #c8c488;
   width: 250px;
   display: flex;
@@ -624,120 +621,173 @@ i {
   padding: 1rem;
 }
 
-.c-icons{
+.c-icons {
   width: 100%;
   display: flex;
   justify-content: space-evenly;
-
 }
 
-.c-icons i:hover{
+.c-icons i:hover {
   color: #f1f1f1;
 }
 
-h2.title{
+h2.title {
   width: 100%;
   display: block;
   text-align: left;
-  padding:0.5rem;
+  padding: 0.5rem;
   font-size: 2vw;
   color: #f1f1f1;
   text-shadow: 2px 2px #414141;
 }
 
-
-.column{
-display: flex;
-flex-direction: column;
-width: 500px;
-height: 600px;
-background-color: #c8c488;
-border-radius: 10px;
+.column {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  height: 600px;
+  background-color: #c8c488;
+  border-radius: 10px;
 }
 
-.products{
+.products {
   width: 100%;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
-  padding:10px;
+  padding: 10px;
 }
 
-.column h2{
+.column h2 {
   width: 100%;
   padding: 10px;
-  position:sticky;
-  top:0;
+  position: sticky;
+  top: 0;
   z-index: 1;
   background-color: #c8c488;
   color: #000;
   text-shadow: 2px 2px #f1f1f1;
-  border-radius: 10px 10px 0px 0px ;
+  border-radius: 10px 10px 0px 0px;
   box-shadow: 0px 1px 10px #414141;
 }
 
-.product{
+.product {
   display: flex;
   flex-direction: column;
   width: 100%;
   background-color: white;
   border-radius: 10px;
-  margin-bottom:10px;
-  align-items:center;
+  margin-bottom: 10px;
+  align-items: center;
 }
 
-
-
-.product img{
-  width:100%;
-  height:200px;
+.product img {
+  width: 100%;
+  height: 200px;
   border-radius: 10px 10px 0 0;
 }
 
-.sleeves img{
+.sleeves img {
   width: 60%;
   background-color: white;
 }
 
-.cfile img{
+.cfile img {
   width: 60%;
   background-color: white;
 }
 
-.deckbox img{
+.deckbox img {
   width: 60%;
   background-color: white;
 }
 
-.detail{
+.detail {
   border-radius: 0 0 10px 10px;
   background-color: #6d3d6e;
-width: 100%;
-display: flex;
-flex-direction: row;
-padding:20px;
-text-align: center;
-justify-content: space-evenly;
-align-items: center;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  text-align: center;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-
-.detail > p{
-  flex:8;
+.detail > p {
+  flex: 8;
   font-size: 1rem;
-  color:#f1f1f1;
+  color: #f1f1f1;
   text-shadow: 2px 2px #414141;
 }
 
-.detail > i{
+.detail > i {
   flex: 2;
-  color:#f1f1f1;
+  color: #f1f1f1;
   text-shadow: 2px 2px #414141;
 }
 
-.detail > i:hover{
+.detail > i:hover {
   color: #c8c488;
 }
 
+.tournaments {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  overflow: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
 
+.tournaments a {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: #000;
+  text-decoration: none;
+  width: 100%;
+}
 
+.tourna {
+  width: 80%;
+  height: 200px;
+  display: flex;
+  flex-direction: row;
+  background-color: #c8c488;
+  border-radius: 10px;
+  align-items: center;
+  box-shadow: 0 0 5px 3px #414141;
+  transition: 0.3s ease;
+}
+
+.tourna:hover {
+  box-shadow: 0 0 3px 1px #f1f1f1;
+}
+
+.tourna img {
+  width: 40%;
+  height: 100%;
+  border-radius: 10px 0px 0px 10px;
+  object-fit: cover;
+}
+
+.tourna .tourna-detail {
+  width: 60%;
+  border-radius: 0px 10px 10px 0px;
+  background-color: #c8c488;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 2rem;
+}
+
+.tourna p,
+.tourna h3 {
+  width: 60%;
+  font-style: italic;
+  display: inline-block;
+  text-align: left;
+}
