--- a/style.css
+++ b/style.css
@@ -473,6 +473,7 @@ i {
   text-decoration: none;
   color: #f1f1f1;
   letter-spacing: 0.15rem;
+  text-decoration: dotted;
   transition: 0.3s ease;
 }
 
@@ -888,4 +889,27 @@ h2.title {
   width: 95%;
   flex-direction: row;
   justify-content: center;
+}
+
+
+.about-dev-btn{
+
+  margin-top:30px;
+  width:100%;
+  background:#c8c488;
+  color: #342276;
+  text-shadow: 2px 2px #f1f1f1;
+  padding: 10px 50px;
+  text-align:center;
+  text-decoration: none;
+  border-radius: 50px;
+  box-shadow: 3px 3px #6d3d6e;
+  transition:0.3s ease;
+}
+
+.about-dev-btn:hover{
+  background:#342276;
+  color: #c8c488;
+  text-shadow: 2px 2px #414141;
+  box-shadow: 3px 3px #6d3d6e;
 }
